# sisyphus

./: Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: build.yml
sisyphus/: library.py  soundpointsgenerators.py
sisyphus/builds/score/: front-cover.tex  score.tex
sisyphus/builds/score/_sections/: a.ily
sisyphus/segments/a/: __metadata__.json  music.ily  music.py
sisyphus/stylesheets/: stylesheet.ily
tests/: test_soundpointsgenerator.py
